refactor constructors and models