@@ -9,6 +9,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class Eras {
@@ -27,7 +28,7 @@ public class Eras {
                     e.printStackTrace();
                     return null;
                 }
-            }).toList();
+            }).collect(Collectors.toList());
             collection.setData(eras);
         } catch (IOException e){
             e.printStackTrace();
