@@ -9,6 +9,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class HistoricalFigures {
@@ -30,7 +31,7 @@ public class HistoricalFigures {
                     e.printStackTrace();
                     return null;
                 }
-            }).toList();
+            }).collect(Collectors.toList());
 
             collection.setData(figures);
         } catch (IOException e){
