@@ -10,6 +10,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class HistoricSites {
@@ -31,7 +32,7 @@ public class HistoricSites {
                     e.printStackTrace();
                     return null;
                 }
-            }).toList();
+            }).collect(Collectors.toList());
 
             collection.setData(sites);
         } catch (IOException e){
